--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="image/pic.png" alt="ashish profile picture" widht="150" height="150"></td>
+      <td><img src="image/image.png" alt="ashish profile picture" widht="150" height="150"></td>
       <td><h1>Ashish Thakur</h1>
       <p><em>A fresher who is <strong><a href="https://www.indeed.com">trying to get a job</a></strong></em></p>
       <p>I am a Web Developer. I love video games and favourite game is God of war.</p></td>
